# fd-queue

./: .gitignore  .releaserc.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: audit.yml  ci.yml  release.yml
src/: biqueue.rs  lib.rs  mio.rs  net.rs  queue.rs  tokio.rs
src/biqueue/: iomsg.rs
src/net/: biqueue.rs  iomsg.rs
