[package]
name = "fd-queue"
version ="1.0.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"
description = "A library to support fd passing on Unix sockets."
readme = "README.md"
repository = "https://github.com/kettleby/fd-queue"
license = "MIT OR Apache-2.0"
keywords = ["fd", "unix", "socket", "domain"]
categories = ["asynchronous", "os::unix-apis"]

[features]
net-fd = ["tracing"]
mio-fd = ["net-fd", "mio"]
tokio-fd = ["net-fd", "tokio", "socket2", "pin-project", "futures-core", "futures-util"]

[dependencies]
tracing = {version = "0.1.15", optional = true}
mio = {version = "0.6.22", optional = true}
tokio = {version = "1.0.0", optional = true, features = ["net"]}
pin-project = {version = "0.4.22", optional = true}
futures-core = {version = "0.3.5", optional = true}
futures-util = {version = "0.3.5", optional = true}
socket2 = {version = "0.3.12", optional = true, features = ["unix"]}
libc = "0.2.80"
num-traits = "0.2.14"

[dev-dependencies]
nix = "0.17.0"
tempfile = "3.1.0"
assert_matches = "1.3.0"
tokio = {version = "1.0.0", features = ["rt-multi-thread", "macros", "io-util"]}

[build-dependencies]
libc = "0.2.80"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
