[package]
name = "fd-queue"
version = "1.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"
description = "A library to support fd passing on Unix sockets."
readme = "README.md"
repository = "https://github.com/kettleby/fd-queue"
license = "MIT OR Apache-2.0"
keywords = ["fd", "unix", "socket", "domain"]
categories = ["asynchronous", "os::unix-apis"]

[features]
net-fd = ["tracing"]
mio-fd = ["net-fd", "mio"]
tokio-fd = ["tracing", "tokio", "pin-project", "futures-core", "futures-util"]

[dependencies]
tracing = { version = "0.1.36", optional = true }
mio = { version = "0.6.22", optional = true }
tokio = { version = "1.21.0", optional = true, features = ["net"] }
pin-project = { version = "1.0.12", optional = true }
futures-core = { version = "0.3.24", optional = true }
futures-util = { version = "0.3.24", optional = true }
libc = { version = "0.2.132", features = ["extra_traits"] }
num-traits = "0.2.15"

[dev-dependencies]
nix = "0.25.0"
tempfile = "3.3.0"
assert_matches = "1.5.0"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros", "io-util"]}
tokio-test = "0.4.2"

[build-dependencies]
libc = "0.2.132"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
