[package]
name = "fd-queue"
version = "1.1.0"
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
edition = "2018"
description = "A library to support fd passing on Unix sockets."
readme = "README.md"
repository = "https://github.com/kettleby/fd-queue"
license = "MIT OR Apache-2.0"
keywords = ["fd", "unix", "socket", "domain"]
categories = ["asynchronous", "os::unix-apis"]

[features]
net-fd = ["tracing"]
mio-fd = ["net-fd", "mio"]
tokio-fd = ["tracing", "tokio", "pin-project", "futures-core", "futures-util"]

[dependencies]
tracing = {version = "0.1.15", optional = true}
mio = {version = "0.8.4", optional = true, features = ["net"]}
tokio = {version = "1.0.0", optional = true, features = ["net"]}
pin-project = {version = "1.0.0", optional = true}
futures-core = {version = "0.3.5", optional = true}
futures-util = {version = "0.3.5", optional = true}
libc = {version = "0.2.80", features = ["extra_traits"]}
num-traits = "0.2.14"
smallvec = "1.10.0"

[dev-dependencies]
tempfile = "3.1.0"
assert_matches = "1.3.0"
tokio = {version = "1.0.0", features = ["rt-multi-thread", "macros", "io-util"]}
tokio-test = "0.4.2"
mio = {features = ["os-poll", "os-ext"]}

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
